--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
             <!-- home -->
             <a href="/view_categories">
                 <div class="nav-item">
-                    <img src="/static/img/home-icon.png" alt="home">
+                    <img src="/static/img/category - white.png" alt="category">
                     Categories
                 </div>
             </a>
