--- a/templates/index.html
+++ b/templates/index.html
@@ -166,7 +166,11 @@
 
     <style>
         body{
-            background-color: #fbfafb;
+            /* background-color: #fbfafb; */
+            background-image: url(/static/img/background.png);
+            background-size: cover; /* Optional: Cover the entire viewport */
+            background-repeat: no-repeat; /* Optional: Prevent repeating */
+            background-attachment: fixed; /* Make the background fixed */
         }
     </style>
 </body>
