--- a/static/css/style.css
+++ b/static/css/style.css
@@ -404,7 +404,12 @@ body{
     background-color: white;
     padding: 5px 10px;
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
-    margin-top: 20px;
+    margin-top: -35px;
+    width: 300px;
+}
+
+#news img{
+    margin-bottom: 60px;
 }
 
 #news #popular-category-box h4{
@@ -626,4 +631,50 @@ body{
 #second-bar .pink-rounded-button{
     margin-left: 80%;
     margin-bottom: 40px;
+}
+
+.category-form{
+    text-align: center;
+    width: 60%;
+    margin-left: 20%;
+    margin-top: 100px;
+}
+
+.category-form h1{
+    font-size: 40px;
+}
+
+.category-form p{
+    color: #ABAAAB;
+}
+
+.category-form form .account-int{
+    padding-top: 15px;
+    padding-right: 30px;
+    padding-left: 30px;
+    padding-bottom: 15px;
+    font-family: 'century gothic';
+    /* background-color: #EAEEED; */
+    border: none;
+    margin-bottom: 10px;
+    font-size: 18px;
+    margin-left: -20px;
+    text-align: center;
+    width: 100%;
+    /* width: 250px; */
+    margin-top: 30px;
+    margin-bottom: 60px;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+}
+
+.category-form p a {
+    text-decoration: underline solid 2px #d9717100;
+    color: black;
+    transition: all 0.3s ease;
+}
+
+.category-form p a:hover{
+    text-decoration: underline solid 2px #d971717d;
+    transition: all 0.3s ease;
 }
